bug 525677: shuffle some headers to appease gcc 4.2. IRC r=fred23,bsmedberg