content/canvas/src/DocumentRendererChild.cpp
@@ -34,7 +34,8 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
-#include "mozilla/ipc/DocumentRendererChild.h"
+#include "base/basictypes.h"
+
 #include "gfxImageSurface.h"
 #include "gfxPattern.h"
 #include "nsPIDOMWindow.h"
@@ -52,6 +53,8 @@
 #include "gfxContext.h"
 #include "gfxImageSurface.h"
 #include "nsLayoutUtils.h"
+
+#include "mozilla/ipc/DocumentRendererChild.h"
 
 using namespace mozilla::ipc;
 
